<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.ActivityAppointmentsCancelled">

<!-- <include android:id="@+id/appbar" layout="@layout/appbar_activity_response"/> -->

<include layout="@layout/include_toolbar" />
<ImageView
    android:id="@+id/iv_response"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="96dp"
    android:src="@drawable/icon_success"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/include_toolbar" />

<TextView
    android:id="@+id/tv_response"
    android:text="@string/success"
    android:textSize="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_response" />

<TextView
    android:id="@+id/tv_response_message"
    android:text="@string/success_cancelled"
    android:textSize="14dp"
    android:padding="8dp"
    android:gravity="center"
    android:textStyle="italic"
    android:textColor="@color/colorGreen"
    android:background="@drawable/bg_tv_round_light"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_response" />

<TextView
    android:id="@+id/tv_details_link"
    android:text="@string/check_call_details"
    android:textSize="14dp"
    android:padding="8dp"
    android:gravity="center"
    android:visibility="gone"
    android:textStyle="italic"
    android:textColor="@color/colorPink"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_response_message" />

</androidx.constraintlayout.widget.ConstraintLayout>